--- a/app/styles/Navbar.module.css
+++ b/app/styles/Navbar.module.css
@@ -2,5 +2,5 @@
     width: 100vw;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
