--- a/app/styles/Marketplace.module.css
+++ b/app/styles/Marketplace.module.css
@@ -1,4 +1,8 @@
 .marketcontainer {
     width: 80vw;
     text-align: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
 }
